--- a/app/production/values.yaml
+++ b/app/production/values.yaml
@@ -1,7 +1,8 @@
 basic-app:
   ingress:
-    hosts:
-      - host: "production.services.frinx.io"
-        paths:
-          - path: /
-            pathType: Prefix
+    enabled: true
+    annotations:
+      kubernetes.io/ingress.class: traefik
+      traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
+      traefik.ingress.kubernetes.io/router.tls: "true"
+      traefik.ingress.kubernetes.io/router.tls.certresolver: "production"
