--- a/app/production/values.yaml
+++ b/app/production/values.yaml
@@ -6,3 +6,4 @@ basic-app:
       traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
       traefik.ingress.kubernetes.io/router.tls: "true"
       traefik.ingress.kubernetes.io/router.tls.certresolver: "production"
+      skusme: "caute"
