--- a/.github/workflows/stag-to-prod.yaml
+++ b/.github/workflows/stag-to-prod.yaml
@@ -18,7 +18,7 @@ jobs:
         uses: peter-evans/create-pull-request@v4
         with:
           # token: ${{ secrets.PAT }}
-          commit-message: Update report
+          commit-message: Update manifest
           committer: GitHub <noreply@github.com>
           author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
           signoff: false
